# my-mkdocs-mike

./: README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: mkdocs-deploy.yml
docs/topic1/: page1.en.md  page1.ja.md
en/topic1/page1/: index.html
ja/topic1/page1/: index.html
search/: search_index.json
topic1/page1/: index.html
