[tool.poetry]
authors = ["kannkyo <15080890+kannkyo@users.noreply.github.com>"]
description = "boilerplate project for mkdocs"
name = "my-mkdocs-mike"
version = "0.0.1"

[tool.poetry.dependencies]
mike = "^1.1.2"
mkdocs = "^1.2.3"
mkdocs-material = "^7.3.6"
mkdocs-static-i18n = "^0.22"
plantuml-markdown = "^3.4.4"
python = "^3.8"

[tool.poetry.dev-dependencies]
toml = "^0.10.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
